<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Marvel My Hero</string>
    <string name="user_icon">User icon</string>
    <string name="logo_marvel_my_hero">Logo Marvel My Hero</string>
    <string name="exit_icon">exit icon</string>
    <string name="collection">Collection</string>
    <string name="my_team">My Team</string>
    <string name="my_deck">My Deck</string>
    <string name="share_icon">Share icon</string>
    <string name="card_image">card image</string>

    <string name="exitDialog_title">Exit</string>
    <string name="exitDialog_message">Would you like to logout ?</string>
    <string name="exitDialog_negativeButton">No</string>
    <string name="exitDialog_positiveButton">Yes</string>

    <string name="username">Username</string>
    <string name="imageDescription_fragmentUser">Profile image</string>
    <string name="total_cards">Total cards</string>
    <string name="total_cards_count">12</string>
    <string name="heroname">Hero Name</string>

    <string name="commumCardColor" tools:ignore="ReferenceType">@color/commumCardColor</string>
    <string name="bronzeCardColor" tools:ignore="ReferenceType">@color/bronzeCardColor</string>
    <string name="silverCardColor" tools:ignore="ReferenceType">@color/silverCardColor</string>
    <string name="goldCardColor" tools:ignore="ReferenceType">@color/goldCardColor</string>
    <string name="diamondCardColor" tools:ignore="ReferenceType">@color/diamondCardColor</string>
    <string name="background_name">background Name</string>
    <string name="classificationStar">★</string>
    <string name="durability">Durability</string>
    <string name="energy">Energy</string>
    <string name="fighting_skills">Fighting Skills</string>
    <string name="inteligence">Intelligence</string>
    <string name="speed">Speed</string>
    <string name="strength">Strength</string>
    <string name="loremIpsum">Lorem ipsum pretium diam.</string>
    <string name="drag_and_drop">DRAG AND DROP CARDS TO BUILD YOUR TEAM</string>
    <string name="text_inserir_cards">Deve inserir cards no time</string>
    <string name="scroll_to_the">SCROLL TO SEE YOUR CARDS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continuar_com_o_google">Continue with Google</string>
    <string name="continuar_com_facebook">Continue with Facebook</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_error">Need an email</string>
    <string name="password_error">Need a password</string>
    <string name="nameSignupError">Need a name</string>
    <string name="passwordLengthError">Must be 4 to 14 characters</string>
    <string name="repeatPasswordCompareError">Passwords must be the same</string>
    <string name="facebook_app_id">876555076435573</string>
    <string name="fb_login_protocol_scheme">fb876555076435573</string>
    <string name="invalidLoginError">Invalid Login</string>
    <string name="backButton">Botão de voltar</string>
    <string name="developers">Developers</string>
    <string name="rafael_irineu">Rafael Irineu Costa Oliveira</string>
    <string name="paulo_santos">Paulo Leonardo Lima dos Santos</string>
    <string name="gabriel_henrique">Gabriel Henrique Marrani N. Segantini</string>
    <string name="professores">Teachers</string>
    <string name="felipe_medeiros">Felipe Medeiros</string>
    <string name="lucas_gabriel">Lucas Gabriel</string>
    <string name="escola_digital_house">Escola Digital House</string>
    <string name="curso_de">Curso de Programação Mobile</string>
    <string name="turma">Turma 2º Semestre de 2020</string>
    <string name="button_developers">Button Developers</string>
    <string name="hero_image">Hero image</string>
    <string name="favorite">Favorite</string>
    <string name="edit_image_icon">edit image icon</string>
    <string name="nickname">NickName</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading</string>

    <string name="info_of_classification_cards">A color of the card edge defines the classification. We have four classifications, bronze, silver and diamond. Where bronze is the weaker and diamond is stronger. They are indicated according to the images below:</string>
    <string name="the_cards_classification">CARDS CLASSIFICATION</string>
    <string name="info">Info</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="diamond">Diamond</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>

    <string name="nickName_error">Need a NickName</string>
    <string name="name_error">Need a Name</string>
    <string name="animation_bar">Animation Bar</string>

    <string name="salvar">salvar</string>
    <string name="campo_vazio">Campo vazio!</string>
    <string name="numero_caracteres">Mínimo 6 caracteres!</string>
    <string name="senha_diferente">Senhas divergentes!</string>
    <string name="email_invalido">Email inválido!</string>

</resources>