<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background"
    android:paddingTop="@dimen/borderPadding"
    tools:context=".developers.view.DevelopersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="12dp">

        <ImageView
            android:id="@+id/img_arrowBack_Developers"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_marginStart="@dimen/marginSmall"
            android:contentDescription="@string/backButton"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/textPrimary" />

        <TextView
            android:id="@+id/textView_Developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/gobold_bold"
            android:gravity="center"
            android:text="@string/developers"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_Gabriel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/gabriel_henrique"
            android:textColor="@color/textPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_Developers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Linkedin_Gabriel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/linkedin"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/textView_Gabriel"
            app:layout_constraintTop_toBottomOf="@+id/textView_Gabriel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Github_Gabriel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:text="@string/github"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/btn_Linkedin_Gabriel"
            app:layout_constraintTop_toBottomOf="@+id/textView_Gabriel" />

        <TextView
            android:id="@+id/textView_Paulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/paulo_santos"
            android:textColor="@color/textPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Linkedin_Gabriel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Linkedin_Paulo"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/linkedin"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/textView_Paulo"
            app:layout_constraintTop_toBottomOf="@+id/textView_Paulo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Github_Paulo"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:text="@string/github"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/btn_Linkedin_Paulo"
            app:layout_constraintTop_toBottomOf="@+id/textView_Paulo" />

        <TextView
            android:id="@+id/textView_Rafael"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/rafael_irineu"
            android:textColor="@color/textPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Linkedin_Paulo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Linkedin_Rafael"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/linkedin"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/textView_Rafael"
            app:layout_constraintTop_toBottomOf="@+id/textView_Rafael" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Github_Rafael"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:text="@string/github"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/btn_Linkedin_Rafael"
            app:layout_constraintTop_toBottomOf="@+id/textView_Rafael" />

        <TextView
            android:id="@+id/textView_Professores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/gobold_bold"
            android:gravity="center"
            android:text="@string/professores"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Github_Rafael" />

        <TextView
            android:id="@+id/textView_Felipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/felipe_medeiros"
            android:textColor="@color/textPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Professores" />

        <TextView
            android:id="@+id/textView_Lucas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/lucas_gabriel"
            android:textColor="@color/textPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Felipe" />

        <TextView
            android:id="@+id/textView_Escola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/gobold_bold"
            android:gravity="center"
            android:text="@string/escola_digital_house"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_Lucas" />

        <TextView
            android:id="@+id/textView_Curso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/curso_de"
            android:textColor="@color/textPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Escola" />

        <TextView
            android:id="@+id/textView_Turma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/turma"
            android:textColor="@color/textPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Curso" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>