<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boderColor_cardMini"
    android:layout_width="@dimen/cardMini_width"
    android:layout_height="@dimen/cardMini_height"
    android:layout_gravity="center"
    android:layout_margin="2dp"
    android:background="@color/cardview_dark_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/background_card"
        android:padding="2dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            tools:layout_editor_absoluteX="6dp">

            <ImageView
                android:id="@+id/img_heroPic_cardMini"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/card_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logoHeight_cardMini"
            android:layout_gravity="bottom"
            android:contentDescription="@string/logo_marvel_my_hero"
            android:src="@drawable/ic_my_hero_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/textPrimary" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_name_card_mini"
            android:contentDescription="@string/background_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_heroName_cardMini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/gobold_bold"
            android:maxLines="1"
            android:text="@string/heroname"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/textMin"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ic_fav_cardMini"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_baseline_stars_24"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/goldCardColor" />

</androidx.constraintlayout.widget.ConstraintLayout>